--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.1' apply false
-    id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-}
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1'
+    }
 }
