--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 
+
 buildscript {
     repositories {
         google()
@@ -6,8 +7,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.3'
     }
 }
