--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,6 @@ dependencies {
     def nav_version = "2.4.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-//    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-
 
     def hilt_version = "2.40.5"
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -86,6 +84,8 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 
     implementation "com.squareup.picasso:picasso:2.71828"
+
+    implementation "joda-time:joda-time:2.10.13"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
